--- a/Blog/_config.yml
+++ b/Blog/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Leoliu
 subtitle:
 description:
 keywords:
-author: John Doe
-language:
+author: Leoliu
+language: zh-Hans
 timezone:
 
 # URL
