--- a/Blog/themes/next/_config.yml
+++ b/Blog/themes/next/_config.yml
@@ -94,8 +94,9 @@ index_with_subtitle: false
 menu:
   home: / || home
   #about: /about/ || user
-  #tags: /tags/ || tags
-  #categories: /categories/ || th
+  Objective-C: /categories/Objective-C/ || th
+  tags: /tags/ || tags
+  # categories: /categories/ || th
   archives: /archives/ || archive
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
