--- a/Blog/themes/next/_config.yml
+++ b/Blog/themes/next/_config.yml
@@ -96,6 +96,7 @@ menu:
   #about: /about/ || user
   Objective-C: /categories/Objective-C/ || th
   shell: /categories/shell/ || taxi
+  tool: /categories/tool/ || wrench
   tags: /tags/ || tags
   # categories: /categories/ || th
   archives: /archives/ || archive
