--- a/Blog/themes/next/_config.yml
+++ b/Blog/themes/next/_config.yml
@@ -97,9 +97,10 @@ menu:
   Objective-C: /categories/Objective-C/ || th
   shell: /categories/shell/ || taxi
   tool: /categories/tool/ || wrench
+  Cocoa Touch: /categories/Cocoa-Touch/  || apple
   Cocoa: /categories/Cocoa/  || apple
   Python: /categories/Python/  || bar-chart
-  Javascript: /categories/Javascript/  || space-shuttle
+  # Javascript: /categories/Javascript/  || space-shuttle
   tags: /tags/ || tags
   # categories: /categories/ || th
   archives: /archives/ || archive
