--- a/Blog/themes/next/_config.yml
+++ b/Blog/themes/next/_config.yml
@@ -100,6 +100,7 @@ menu:
   Cocoa Touch: /categories/Cocoa-Touch/  || apple
   Cocoa: /categories/Cocoa/  || apple
   Python: /categories/Python/  || bar-chart
+  Swift: /categories/Swift/  || dove
   # Javascript: /categories/Javascript/  || space-shuttle
   tags: /tags/ || tags
   # categories: /categories/ || th
